# Latent_risk_factor

./: .gitattributes  .gitignore  ISD_methodology.md  Latent_risk_factor_benchmark.md  isd_vae_latent_risk_factors.md  pyproject.toml
.claude/: PROTOCOL.md  README.md  settings.json  settings.local.json.example
.claude/agents/: TEMPLATE-agent.md  clear-conversations.md  test-runner.md
.claude/commands/: lint.md  test.md  update-docs.md
.claude/rules/: 00-claude-config.md  00-role.md  01-python-guidelines.md  02-git-commit.md  03-code-quality.md  04-task-completion.md  05-comments-readme.md  06-documentation-protocol.md  07-environment-setup.md  (+1 more)
data/: tiingo_us_equities.parquet
docs/: DVT_strategie_facteurs_risque_latents_v4_1.md  ISD_vae_latent_risk_factors.md  analyse_critique_strategie.md  data_preprocessing_diagnostic.md  diagnostic.md  divergences.md  implementation_decisions.md  literature_review_idiosyncratic_risk.md  literature_review_strategy.md  sigma_z_ewma_justification.md  strategic_paths_post_v2.md  strategy_comparison.md  strategy_philosophy.md  vae_training_pipeline_audit.md
notebooks/: dashboard.ipynb  diagnostic_experiments.ipynb
results/: config.json  equal_weight_fold_metrics.csv  erc_fold_metrics.csv  inverse_vol_fold_metrics.csv  min_variance_fold_metrics.csv  pca_factor_rp_fold_metrics.csv  pca_vol_fold_metrics.csv  report.json  report.txt  vae_fold_metrics.csv
scripts/: download_sp500.py  download_tiingo.py  run_benchmarks.py  run_diagnostic.py  run_walk_forward.py
src/: __init__.py  config.py  utils.py  validation.py
(+156 files in other folders)
